src/app/home/main/main.component.scss
@import "@primer/css/utilities/animations.scss";

:host {
  --main-sat: 173;
  --darken: rgba(26, 29, 37, 0.8);
  --opacity: 0.8;
  --main-color: hsla(var(--main-sat), 100%, 50%, 1);
  * {
    box-sizing: border-box;
  }
}
:host-context(.light){
  --opacity: 0.2;
}
.main-color {
  color: var(--main-color);
}

.underline {
  width: 25%;
  margin-left: 0px;
}


#lead {
  right: 0;
  bottom: 0;
  width: auto;
  min-width: 100%;
  height: 100vh;
  min-height: 100%;
  background: rgba(26, 29, 37,var(--opacity));
  display: grid;
  grid-template-rows: 250px auto;
}
#services {
  right: 0;
  bottom: 0;
  width: auto;
  min-width: 100%;
  height: auto;
  background: hsla(var(--main-sat), 100%, 50%, var(--opacity));
}
@mixin image-bg($imageUrl, $minHeight) {
  width: 100%;
  min-height: $minHeight;
  background: $imageUrl;
  background-position: center center;
  background-size: cover;
  opacity: 1;
  width: 100%;
  border-radius: 0px;
  color: white;
  text-transform: uppercase;
  margin: 0;
  overflow: hidden;
}

.hm {
  --bg-image: url('/assets/images/comp-store.jpg');
  &-lead,
  &-services {
    @include image-bg(
      var(--bg-image),
      450px
    );
    display: grid;
  }
  &-lead {
    --bg-image: url(/assets/images/comp-store.jpg);
  }
  &-services {
    --bg-image: url(/assets/images/comp-build.jpg);
    &-cards {
      display: grid;
      grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
      place-items: center;
      height: 100%;
      width: 100%;
      border: 1px solid black;
      .services-card {

        h2 {
          color: var(--main-color);
        }
        padding: 0 1rem;
        margin: 2rem;
        border: 1px solid black;
        border-radius: 0.25rem;
        min-height: 450px;
        min-width: 350px;
        max-width: 350px;
        display: flex;
        flex-direction: column;
        justify-content: space-between;
        background: var(--darken);
        letter-spacing: 2px;

        .card-content {
          margin-top: -0.5rem;
          margin-bottom: 1rem;
          flex: 1 0 auto;
          display: flex;
          flex-direction: column;
          justify-content: flex-start;
        }
        .card-actions {
          margin-bottom: 1rem;
          .card-button {
            cursor: pointer;
            width: 100%;
            height: 50px;
            background-color: var(--main-color);
            color: var(--darken);
            border: none;
            border-radius: 3px;
            text-transform: uppercase;
          }
        }
      }
    }
  }
  &-section {
    &-content {
      width: 100%;
      height: 100%;
      display: grid;
      margin: 0 1rem;
      padding: 1rem 1rem;
    }
    width: 100%;
    //height: 100vh;
    background: var(--main-color);
    display: grid;
    place-items: center;

    &:nth-child(2n) {
      filter: hue-rotate(0.15turn);
    }
    &:nth-child(2n + 1):not(:first-child) {
      filter: hue-rotate(1turn);
    }
  }
}

#location {
  width: 100%;
  min-width: 100%;
  height: 100%;
  display: grid;
  grid-template-columns: minmax(150px, 25%) 1fr;
}
#map {
  height: 450px;
  width: 100%;
}
.address-side {
  .heading {
    min-height: 60px;
    line-height: 60px;
    padding: 0 10px;
    background: var(--darken);
    color: var(--main-color);
    h1 {
      font: sans-serif!important;
      font-size: 2em;
      margin: .67em 0;
      margin-bottom: 0;
      padding-bottom: 0;
      padding: 0;
    }
  }
  .listings {
    ul {
      padding: 0;
      list-style: none;
    }
    overflow: auto;
    .item {
        cursor: pointer;
      color: var(--darken);
      margin-top: 1rem;
      padding: 0 0.25rem;
      display: block;
      text-decoration: none;
      .title {
        display: block;
        font-weight: 700;
      }
    }
  }
}

